--- a/main.css
+++ b/main.css
@@ -1,10 +1,23 @@
 body {
-    background: #f2f2f2;
+    background: #FAF9F6;
     color: #212121;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     @media (prefers-color-scheme: dark) {
-        background: #aaa;
+        background: #414a4c;
     }
+}
+
+h2 {
+    @media (prefers-color-scheme: dark) {
+        color: #FAF9F6;
+    }
+}
+
+a {
+    @media (prefers-color-scheme: dark) {
+        color: #FAF9F6;
+    }
+    text-decoration: none;
 }
 
 #Bookmarks {
@@ -23,9 +36,13 @@ body {
 .item {
     list-style-type: '- ';
     list-style-position: outside;
+    margin-bottom:0.3rem;
 }
 
 a:hover {
-    text-decoration: none;
+    text-decoration: underline;
     color: red;
+    @media (prefers-color-scheme: dark) {
+        color: #FAF9F6;
+    }
 }
