--- a/main.css
+++ b/main.css
@@ -1,9 +1,16 @@
 body {
+    font-size: 2rem;
     background: #FAF9F6;
     color: #212121;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     @media (prefers-color-scheme: dark) {
         background: #414a4c;
+    }
+}
+
+@media (min-width:801px)  {
+    body {
+        font-size: 1rem;
     }
 }
 
